--- a/main.html
+++ b/main.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
 		<link rel="stylesheet" href="mystyle.css">
 	</head>
 	
-	<body>
+	<body onload="checkCookie()">
+		
 		<div id="myDIV" class="header">
 			<h2 style="margin:5px">My To Do List</h2>
 			<input type="text" id="myInput" placeholder="Title...">
@@ -21,7 +21,7 @@
 			<li>Read a book</li>
 			<li>Organize office</li>
 		</ul>
-
+		
 		<script src="myscripts.js"></script>
 	</body>
 </html>
